Make sure that white space is pre when printing logs

--- a/src/tibet/tools/sherpa/css/sherpa_pp.css
+++ b/src/tibet/tools/sherpa/css/sherpa_pp.css
@@ -83,6 +83,8 @@
 .sherpa_pp.TP_boot_Log {
 
     display: table;
+
+    white-space: pre;
 }
 
 .sherpa_pp.TP_boot_Log > span {
